fixed hamburger causing horizontal scroll - changed margin to %

--- a/style.css
+++ b/style.css
@@ -427,7 +427,7 @@ footer button {
         visibility: visible;
         /* position: absolute; */
         /* right: 12em; */
-        margin-left: 12em;
+        margin-left: 82%;
         z-index: 100;
     }
     /* TOGGLE MENU */
